[project]
name = "grace"
version = "0.1.0"
description = "License 服务管理平台，为用户分发 license 文件，并提供 license 的校验 API。"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.42.0",
]

[project.scripts]
grace = "grace.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grace"]
